syntax = "proto3";

option java_multiple_files  =true;

package hcmus.zingmp3.artist;

message ArtistRequestGrpc {
  string id = 1;
  string alias = 2;
  string name = 3;
  string thumbnailId = 4;
  string realName = 5;
  string status = 6;
}

message ArtistResponseGrpc {
  string id = 1;
  string alias = 2;
  string name = 3;
  string thumbnailId = 4;
  string realName = 5;
  string status = 6;
}

service ArtistService {
  rpc isExist(ArtistRequestGrpc) returns (ArtistResponseGrpc);
  rpc getArtistById(ArtistRequestGrpc) returns (ArtistResponseGrpc);
  rpc getOrCreateArtist(ArtistRequestGrpc) returns (ArtistResponseGrpc);
}