syntax = "proto3";

option java_multiple_files = true;

package hcmus.zingmp3;

message UserRequestGrpc {
  string id = 1;
}

message UserResponseGrpc {
  string id = 1;
  string email = 2;
}

service UserService {
  rpc getById(UserRequestGrpc) returns (UserResponseGrpc);
}